--- a/W05_layout-navigasi/layout_flutter/pubspec.yaml
+++ b/W05_layout-navigasi/layout_flutter/pubspec.yaml
@@ -87,3 +87,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  flutter:
+  assets:
+    - images/bromo.jpg
+
